# dbslxlvseefacedkfb

./: .editorconfig  .gitattributes  .gitignore  모델 오류 진단서.txt
AnimiqCore/: CHANGELOG.md  CMakeLists.txt  README.md  build.ps1
AnimiqCore/.github/workflows/: host-publish.yml  host-stability-nightly.yml  unity-miq-compat.yml  vxavatar-gate.yml  winui-min-repro.yml
AnimiqCore/docs/: CONTRIBUTING_DOCS.md  INDEX.md  USER_GUIDE.md  WINUI_BUILD_SETUP.md
AnimiqCore/docs/formats/: Miq.md  vxa2.md
AnimiqCore/docs/public/: compatibility.md  error-codes.md  migration.md  webcam-mediapipe-setup.md
AnimiqCore/docs/reference/: INDEX.md  persona_action_plan.md  persona_evaluation_schema.md  rebrand_and_migration.md
AnimiqCore/docs/reports/: DOMAIN_INDEX.md  Miq_10of10_gate_execution_2026-03-06.md  Miq_avatarroot_export_2026-03-02.md  Miq_expression_arm_shadow_recovery_2026-03-06.md  Miq_front_view_and_material_alignment_2026-03-05.md  Miq_import_rig_accuracy_hardening_followup_2026-03-06.md  Miq_import_v4_rig_hardening_2026-03-06.md  Miq_liltoon_parity_material_extension_2026-03-06.md  Miq_liltoon_texture_export_fallback_2026-03-05.md  Miq_native_unknown_section_parity_2026-03-03.md  Miq_native_uv_offset_fix_2026-03-05.md  Miq_physics_typed_sections_and_pipeline_2026-03-06.md  Miq_poiyomi_typed_material_parity_extension_2026-03-06.md  Miq_policy_gateH_ci_2026-03-03.md  Miq_relaxed_export_menu_2026-03-05.md  Miq_render_breakage_guardrail_update_2026-03-06.md  Miq_sdk_bootstrap_2026-03-02.md  Miq_sdk_diagnostics_and_gate_expansion_2026-03-03.md  Miq_shader_policy_relaxation_runtime_fallback_2026-03-06.md  Miq_signature_gate_and_vsf_fallback_2026-03-03.md  Miq_skinning_stabilization_and_v2_path_2026-03-06.md  Miq_standard_mtoon_strict_parity_expansion_2026-03-06.md  Miq_tryload_test_and_deterministic_gate_2026-03-03.md  Miq_typed_material_v2_liltoon_phase1_2026-03-06.md  Miq_typed_v3_ultra_parity_foundation_2026-03-06.md  Miq_unity_2021_3_18f1_support_and_gate_2026-03-05.md  Miq_unity_editor_findpass_compile_hotfix_2026-03-06.md  Miq_unknown_section_policy_diagnostics_2026-03-03.md  Miq_visibility_fallback_and_warning_gate_2026-03-06.md  Miq_warning_contract_gate_upgrade_2026-03-06.md  TEMPLATE.md  avatar_extension_policy_trim_2026-03-05.md  avatar_render_recovery_bundle_2026-03-06.md  consumer_wpf_flow_and_tracking_schema_update_2026-03-06.md  host_blocker_closure_implementation_pass_2026-03-05.md  host_blocker_status_board_2026-03-05.md  host_change_rollup_2026-03-05.md  host_diagnostics_schema_update_2026-03-05.md  host_exe_publish_2026-03-02.md  host_execution_round_2026-03-05.md  (+83 more)
AnimiqCore/host/: HostApps.sln
AnimiqCore/host/HostCore/: AutomationExtensions.cs  AutomationWorkflow.cs  AvatarSessionService.cs  AvatarThumbnailPipeline.cs  AvatarThumbnailWorker.cs  DiagnosticsModel.cs  HostController.Automation.cs  HostController.MvpFeatures.cs  HostController.cs  HostCore.csproj  HostFeatureGates.cs  HostInterfaces.cs  HostUiPolicy.cs  HostUiState.cs  NativeCoreInterop.cs  OutputService.cs  PlatformFeatures.cs  PosePresetStore.cs  RenderPresetStore.cs  TrackingErrorHintCatalog.cs  TrackingInputService.cs
AnimiqCore/host/WinUiHost/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  WinUiHost.csproj
AnimiqCore/host/WpfHost/: App.xaml  App.xaml.cs  CommandPalette.xaml  CommandPalette.xaml.cs  FloatingAvatarWindow.xaml  FloatingAvatarWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RenderHwndHost.cs  ThumbnailWorker.cs  WpfHost.csproj
AnimiqCore/src/: main.cpp
AnimiqCore/src/avatar/: Miq_loader.cpp  Miq_loader.h  avatar_loader_facade.cpp  vrm_loader.cpp  (+3 more)
AnimiqCore/tools/: Miq_compression_quality_gate.ps1  Miq_gate_sample_manifest.example.json  Miq_package_release_gate.ps1  Miq_parity_gate.ps1  Miq_prepare_gate_corpus.ps1  Miq_render_regression_gate.ps1  avatar_batch_load_validate.ps1  avatar_batch_validate.ps1  avatar_benchmark_corpus_snapshot.ps1  avatar_benchmark_corpus_validate.ps1  avatar_benchmark_manifest.example.json  avatar_engine_differential_benchmark.ps1  avatar_error_reduction_loop.ps1  avatar_load_soak_gate.ps1  avatar_tool.cpp  avatar_vrm_to_miq_benchmark.ps1  benchmark_mediapipe.ps1  check_ui_encoding.ps1  compare_winui_diag_manifest.ps1  diagnostics_manifest_check.ps1  docs_quality_gate.ps1  docs_rebuild_weekly_indexes.ps1  docs_sync_legacy_stubs.ps1  host_e2e_gate.ps1  host_onboarding_state_smoke.ps1  install_win_sdk_19041.ps1  mediapipe_sidecar_sanity.ps1  mediapipe_webcam_sidecar.py  memory_trend_gate.ps1  nuget_mirror_bootstrap.ps1  onboarding_kpi_calibrate.ps1  onboarding_kpi_seed_telemetry.ps1  publish_hosts.ps1  redeploy_wpf_ifacial_check.ps1  release_blocker_burndown.ps1  release_dashboard_input_guard.ps1  release_dual_lane_gate.ps1  release_gate_dashboard.ps1  release_readiness_gate.ps1  release_ssot_check.ps1  (+39 more)
NativeVsfClone/: CHANGELOG.md  CMakeLists.txt  README.md  build.ps1
NativeVsfClone/docs/: CONTRIBUTING_DOCS.md  INDEX.md
NativeVsfClone/src/: main.cpp
NativeVsfClone/tools/: avatar_batch_validate.ps1  avatar_load_soak_gate.ps1  avatar_tool.cpp  check_ui_encoding.ps1  compare_winui_diag_manifest.ps1  docs_quality_gate.ps1  host_e2e_gate.ps1  mediapipe_sidecar_sanity.ps1  mediapipe_webcam_sidecar.py  nuget_mirror_bootstrap.ps1  onboarding_kpi_summary.ps1  publish_hosts.ps1  release_gate_dashboard.ps1  release_readiness_gate.ps1  release_readiness_strict_tracking.ps1  render_perf_gate.ps1  run_quality_baseline.ps1  setup_tracking_python_venv.ps1  spout2_interop_gate.ps1  unity_xav2_env_bootstrap.ps1  unity_xav2_lts_gate.ps1  unity_xav2_validate.ps1  version_contract_check.ps1  vrm_quality_gate.ps1  vrm_to_xav2.cpp  vrm_to_xav2_quality_gate.ps1  vsfavatar_gated_trend.ps1  vsfavatar_quality_gate.ps1  vsfavatar_render_gate.ps1  vsfavatar_sample_report.ps1  vsfavatar_sidecar.cpp  vxavatar_quality_gate.ps1  vxavatar_sample_report.ps1  winui_diag_matrix_summary.ps1  winui_xaml_min_repro.ps1  wpf_launch_smoke.ps1  wpf_reliability_gate.ps1  xav2_compression_quality_gate.ps1  xav2_gate_sample_manifest.example.json  xav2_package_release_gate.ps1  (+3 more)
(+526 files in other folders)
